syntax = "proto3";

package yandex.cloud.priv.vpc.v1.inner;

import "ydb/public/api/client/yc_private/common/validation.proto";

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/vpc/inner;vpcinnerpb";
option java_outer_classname = "VpcInnerCommon";

// public-api events.common
message RequestedPermissions {
    // <service>.<resource>.<action>
    string permission = 1 [(required) = true];

    // <service>.<resource>
    string resource_type = 2 [(required) = true];

    string resource_id = 3 [(required) = true];

    // is request for permission authorized
    bool authorized = 4;
}
